--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.27.2",
+        "gh-pages": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.4.0",
@@ -23,7 +24,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -52,5 +55,6 @@
         "eslint-plugin-promise": "^6.0.0",
         "eslint-plugin-react": "^7.30.1",
         "prettier": "2.7.1"
-    }
+    },
+    "homepage": "http://rea1109.github.io/component-lib"
 }
