--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "gh-pages": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.39.1",
         "react-icons": "^4.4.0",
         "react-quill": "^2.0.0",
         "react-router-dom": "^6.3.0",
